<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.nach_test.ui.movies.MoviesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.example.nach_test.ui.locations.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_images"
        android:name="com.example.nach_test.ui.images.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>