<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_movie_margin_cv"
        app:cardCornerRadius="@dimen/radious"
        app:cardElevation="@dimen/elevation"
        app:strokeWidth="@dimen/border">
        <androidx.constraintlayout.widget.ConstraintLayout         
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_view_content"
            android:paddingBottom="@dimen/padding_view_content">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/view_movie_iv_movie"
                android:layout_width="@dimen/view_movie_iv_image_width"
                android:layout_height="@dimen/view_movie_iv_image_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/view_movie_iv_image_margin_end"
                app:roundedCornerRadius="@dimen/radious"
                app:roundTopLeft="true"
                app:roundTopRight="false"
                app:roundBottomEnd="false"
                app:roundBottomStart="false"/>
            <TextView
                android:id="@+id/view_movie_tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_movie_iv_movie"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/view_movie_margin_tv_start"
                android:layout_marginEnd="@dimen/view_movie_margin_tv_end"
                android:layout_marginVertical="@dimen/view_movie_margin_tv_vertical"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                tools:text="@string/view_movie_default_title"/>
            <TextView
                android:id="@+id/view_movie_tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_movie_iv_movie"
                app:layout_constraintTop_toBottomOf="@+id/view_movie_tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/view_movie_margin_tv_start"
                android:layout_marginEnd="@dimen/view_movie_margin_tv_end"
                android:layout_marginVertical="@dimen/view_movie_margin_tv_vertical"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/view_movie_default_description"/>
            <TextView
                android:id="@+id/view_movie_tv_original_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_movie_iv_movie"
                app:layout_constraintTop_toBottomOf="@+id/view_movie_tv_description"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/view_movie_margin_tv_start"
                android:layout_marginEnd="@dimen/view_movie_margin_tv_end"
                android:layout_marginVertical="@dimen/view_movie_margin_tv_vertical"
                android:textSize="@dimen/text_size_normal"
                tools:text="@string/view_movie_default_original_title"/>
            <TextView
                android:id="@+id/view_movie_tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_movie_iv_movie"
                app:layout_constraintTop_toBottomOf="@+id/view_movie_tv_original_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/view_movie_margin_tv_start"
                android:layout_marginEnd="@dimen/view_movie_margin_tv_end"
                android:layout_marginVertical="@dimen/view_movie_margin_tv_vertical"
                android:textSize="@dimen/text_size_normal"
                tools:text="@string/view_movie_default_release_date"/>
            <TextView
                android:id="@+id/view_movie_tv_vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_movie_iv_movie"
                app:layout_constraintTop_toBottomOf="@+id/view_movie_tv_release_date"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/view_movie_margin_tv_start"
                android:layout_marginEnd="@dimen/view_movie_margin_tv_end"
                android:layout_marginVertical="@dimen/view_movie_margin_tv_vertical"
                android:textSize="@dimen/text_size_normal"
                tools:text="@string/view_movie_default_vote_average"/>
            <TextView
                android:id="@+id/view_movie_tv_vote_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/view_movie_iv_movie"
                app:layout_constraintTop_toBottomOf="@+id/view_movie_tv_vote_average"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/view_movie_margin_tv_start"
                android:layout_marginEnd="@dimen/view_movie_margin_tv_end"
                android:layout_marginVertical="@dimen/view_movie_margin_tv_vertical"
                android:textSize="@dimen/text_size_normal"
                tools:text="@string/view_movie_default_vote_count"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>